@@ -26,7 +26,8 @@ Add support for modulated/multi-level flashers on WPC (see whatsnewVPM.txt on ho
 Add support for GI on Whitestar
 Improve NGG wheel by using the mech class to simulate the spinning wheel
 
-Reduce latency of input handling, especially on WPC
+Reduce latency of input handling, especially on WPC and add new options around this:
+ cpu_affinity_mask (default 0) and low_latency_throttle (default 1, will divide an emulated frame into more parts to reduce input latency)
 
 Change scaling of the window content if DirectX disabled (incl. 64bit compile) to fit the full window, incl. bilinear upsampling of the DMD/Segments (latter using BasicBitmap by skywind)
 Fix window size issues if an additional mini-DMD is in use
